--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -681,3 +681,297 @@ li#cart-trigger {
 .mobileAnimation{
   @include transition(height 0.4s);
 }
+
+.nav-menu-container{
+  .heart-and-suitcase{
+    text-align: right;
+    .num {
+      padding-right: 5px;
+    }
+    .pipe{
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+  }
+
+  #home-menu{
+    border-color: #d7d7d7;
+    border-width: 1px;
+    border-style: solid;
+    background-color: white;
+    border-left: 0;
+    border-right: 0;
+    margin-top: 55px;
+    font-weight: 700;
+    height: 30px;
+    span{
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      font-size: 8pt;
+      cursor: pointer;
+      position: relative;
+      top:2px;
+    }
+    span:hover{
+      background-color:#003647;
+      color:white;
+    }
+    span:last-child:hover{
+      background-color: transparent;
+    }
+    #search{
+      .nav-mobile-logo{
+        height: 15px;
+      }
+    }
+
+  }
+
+  #search-area {
+    border-style: solid;
+    width: 410px;
+    border-width: 1px;
+    height: 51px;
+    position: absolute;
+    top: 165px;
+    left: 945px;
+    background-color: white;
+    padding-top: 10px;
+    padding-left: 10px;
+    display: none;
+    input{
+      border: none;
+      width: 300px;
+    }
+    .mag-glass{
+      float: right;
+      cursor: pointer;
+      img{
+        height: 30px;
+        margin-right: 25px;
+      }
+    }
+  }
+
+
+  .rect{
+    background-color: white;
+    width: 70%;
+    margin-left: 15%;
+    position: absolute;
+    height: 450px;
+    z-index: 2;
+    display: none;
+  }
+
+  #rect-new-this-week{
+    @media(max-width: 1000px)
+    {
+      height:300px;
+    }
+    @media(min-width: 1001px)and(max-width: 1200px)
+    {
+      height:360px;
+    }
+    @media(min-width: 1201px)and(max-width: 1400px)
+    {
+      height:390px;
+    }
+    @media(min-width: 1401px)and(max-width: 1600px)
+    {
+      height:420px;
+    }
+    .black-bar{
+      background-color: black;
+      height: 70px;
+      color: white;
+      text-align: center;
+      font-weight: 600;
+      padding-top: 25px;
+      font-size: 8pt;
+    }
+    .slide{
+      img{
+        margin-top: 50px;
+        width: 15%;
+      }
+      img:not(:first-child){
+        margin-left: 6.25%;
+      }
+    }
+
+  }
+  #rect-dresses{
+    .left-area{
+      padding-right: 10px;
+      background-color: #f5f5f5;
+      width: 70%;
+      float: left;
+      height: 100%;
+      .col1 , .col2 , .col3 , .col4 {
+        width: 25%;
+        float: left;
+        padding-left: 30px;
+        .head{
+          margin-top: 30px;
+          font-weight :500;
+        }
+        div{
+          clear: both;
+          margin-top:10px;
+        }
+      }
+    }
+    .right-area{
+      width: 30%;
+      float: left;
+      height: 100%;
+      background-color: #003647;
+      .girl-image{
+        img{
+          width: 100%;
+        }
+      }
+      .girl-text{
+        position: relative;
+        .contain{
+          color: white;
+          font-weight: 600;
+          text-align: center;
+          position: absolute;
+          width: 100%;
+          top: 45px;
+          @media(max-width: 1300px)
+          {
+            top:105px;
+          }
+          @media(min-width: 1301px)and(max-width: 1500px)
+          {
+            top:75px;
+          }
+          @media(min-width: 1501px)and(max-width: 1800px)
+          {
+            top:60px;
+          }
+          @media(min-width: 1801px)
+          {
+            top:50px;
+          }
+        }
+      }
+    }
+  }
+  #rect-lookbook{
+    background-color: transparent;
+    .col{
+      padding:0;
+      .head{
+        color: white;
+        text-align: center;
+        font-weight: 600;
+        height: 20%;
+        display: table;
+        width: 101%;
+        .text{
+          display: table-cell;
+          vertical-align: middle
+        }
+      }
+      .image{
+        img{
+          width: 100%;
+        }
+      }
+    }
+    .col:nth-child(odd){
+      .head{
+        background-color: black;
+      }
+    }
+    .col:nth-child(even){
+      .head{
+        background-color: #003647;
+      }
+    }
+  }
+
+  #rect-magazine{
+    @media(max-width: 1100px)
+    {
+      height: 370px;
+    }
+    @media(min-width: 1101px)and(max-width: 1400px)
+    {
+      height: 430px;
+    }
+    @media(min-width: 1401px)and(max-width: 1600px)
+    {
+      height: 470px;
+    }
+    @media(min-width: 1601px)and(max-width: 1800px)
+    {
+      height: 520px;
+    }
+    @media(min-width: 1801px)
+    {
+      height: 540px;
+    }
+    .left-col{
+      height: 100%;
+      background-color: #f5f5f5;
+      .head{
+        text-align: center;
+        font-weight: 500;
+        padding-top: 30px;
+        padding-bottom: 30px;
+      };
+      .images{
+        div{
+          margin: 0;
+          padding: 0;
+          img{
+            width: 100%;
+          }
+        }
+        .text{
+          padding-top: 30px;
+          padding-bottom: 30px;
+          text-align: center;
+          font-weight: 400;
+        }
+      }
+    }
+    .right-col{
+      height: 100%;
+      background-color: #f6e2d5;
+      .head{
+        text-align: center;
+        font-weight: 500;
+        padding-top: 30px;
+        padding-bottom: 30px;
+      }
+      .image{
+        img{
+          width: 100%;
+        }
+        .left-img{
+          padding-left: 30px;
+          padding-right: 15px;
+        }
+        .right-img{
+          padding-left: 15px;
+          padding-right: 30px;
+        }
+        .text{
+          padding-top: 30px;
+          padding-bottom: 30px;
+          text-align: center;
+        }
+      }
+    }
+
+  }
+
+}
