--- a/app/assets/stylesheets/redesign/header/locale_selector.css.scss
+++ b/app/assets/stylesheets/redesign/header/locale_selector.css.scss
@@ -23,7 +23,20 @@
 
 // Desktop
 #gray-top-banner {
-  background-color: $gray-light-bg;
+  background-color: #f5f5f5;
+  height: 25px;
+  div{
+    padding-top: 0;
+  }
+  #account-area{
+    .pipe{
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+  }
+  font-weight:700;
+}
+#top-banner {
   font-size: 15px;
   padding-bottom: 5px;
   padding-top: 5px;
@@ -47,6 +60,7 @@
       vertical-align: baseline;
       margin-right: 10px;
       margin-bottom: -1px;
+      margin-left: 15px;
     }
 
     #locale-selector-label {
@@ -75,7 +89,7 @@
 
         height: 0;
         position: absolute;
-        right: 0;
+        left: 0;
         top: 40%;
       }
     }
@@ -87,7 +101,7 @@
       margin-left: -5px;
       padding: 0;
       position: absolute;
-      width: 100px;
+      width: 115px;
 
       li {
         float: none;
@@ -163,7 +177,6 @@
 
     .arrow {
       @include dropdown-triangle($color: #000, $width: 16px, $height: 8px);
-
       margin-right: -25px;
       position: absolute;
       right: 0;
