--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -692,6 +692,10 @@ li#cart-trigger {
       margin-left: 20px;
       margin-right: 20px;
     }
+    .shopping-bag{
+      width: 17px;
+      margin-top: -4px;
+    }
   }
 
   #home-menu{
