--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -26,7 +26,7 @@ ruby:
     i.fa.fa-heart
     span.pipe |
     span.num 0
-    i.fa.fa-suitcase
+    = image_tag 'homepage/shopping_bag.png', class: 'shopping-bag'
 .row
   .col-md-4.col-md-offset-4
     center
