--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -12,7 +12,7 @@
         = image_tag 'footer/polyvore.jpg'
 
       .register-email
-        = text_field_tag 'email', "REGISTER YOUR EMAIL FOR THIS XX OFFER"
+        = text_field_tag 'email', nil, placeholder: 'REGISTER YOUR EMAIL FOR THIS XX OFFER'
       .submit SUBMIT
   .row.buttons
     .col
