--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -749,6 +749,9 @@ li#cart-trigger {
       border: none;
       width: 300px;
     }
+    input:focus{
+      outline: 0;
+    }
     .mag-glass{
       float: right;
       cursor: pointer;
