--- a/app/views/products/outerwear/collection.html.slim
+++ b/app/views/products/outerwear/collection.html.slim
@@ -3,13 +3,13 @@
 .page-title.default.category-header style="background-image: url('')"
   .container
     .page-title--details
-      h1.no-padding-bottom Jackets
-      p Jackets
+      h1.no-padding-bottom Outerwear
+      p Outerwear
 
 .page-content.products-collections.category
   .container.relative.products-collection
     - @collection.products.each_slice(4) do |products|
       /! [][][][]
       .row.relative
-        = render partial: '/products/jackets/jacket', collection: products, as: :product
+        = render partial: '/products/outerwear/outerwear', collection: products, as: :product
       .clearfix.visible-sm-block.visible-xs-block
