--- a/app/views/products/outerwear/_single.html.slim
+++ b/app/views/products/outerwear/_single.html.slim
@@ -1,6 +1,6 @@
 .col-md-3.col-xs-6.col-xxs-12.category--item data-id=(product.id) data-color-id=(product.color.try(:id))
-  = link_to collection_jacket_path(product, color: product.color.try(:name)) do
-    = image_tag product.images.first, :alt => product.name, :class => "img-product img-responsive", 'data-hover' => product.images.last
+  = link_to collection_product_path(product, color: product.color.try(:name), product_type: 'outerwear') do
+    = image_tag product.images.first, :alt => product.name, :class => 'img-product img-responsive', 'data-hover' => product.images.last
   .details.text-center
     span.name = product.name
     span.price = product_price_with_discount(product.price, product.discount)
