--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -10,6 +10,17 @@
 
 /////////// mega menu //////////
 
+header{
+  #locale-selector-mobile-container{
+    position: initial;
+    ul{
+      z-index: 2;
+    }
+  }
+  .nav-menu:first-child{
+    border: none;
+  }
+}
 .nav-menu {
   text-transform: uppercase;
   font-size: 1.4rem;
@@ -300,6 +311,43 @@ li.shop {
     @media(max-width: 480px) {
       padding-right: 0;
       padding-left: 0;
+    }
+  }
+
+  #cart-trigger{
+    #cart-item-count{
+      margin-top: 5px;
+      position: absolute;
+    }
+    .shopping-bag{
+      margin-left: 23px;
+      width: 24px;
+      margin-top: 4px;
+    }
+  }
+  .masthead.pull-right:last-child{
+    margin-top: 3px;
+    .menu-item{
+      #moodboard-counter{
+        margin-top: -1px;
+        position: absolute;
+      }
+      i{
+        margin-left: 20px;
+        font-size: 16pt;
+      }
+      .pipe{
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+    }
+  }
+  @media(max-width: 320px){
+    .shopping-bag{
+      margin-left: 18px;
+    }
+    i{
+      margin-left: 15px;
     }
   }
 }
