--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -27,12 +27,12 @@ ruby:
     span.pipe |
     span.num#cart-item-count 0
     = image_tag 'homepage/shopping_bag.png', class: 'shopping-bag'
-.row
+.row.hidden-xs
   .col-md-4.col-md-offset-4
     center
       = image_tag 'logo/new-logo.svg'
 
-.row#home-menu.text-center
+.row#home-menu.hidden-xs.text-center
   span.new-this-week NEW THIS WEEK
   span.dresses DRESSES
   span.events EVENTS
