fix footer icons

--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -3,13 +3,13 @@
     .col-md-10.col-md-offset-1
       .stay-social STAY SOCIAL
       .stay-social-images
-        = image_tag 'footer/fb.jpg'
-        = image_tag 'footer/instagram.jpg'
-        = image_tag 'footer/twitter.jpg'
-        = image_tag 'footer/pinterest.jpg'
-        = image_tag 'footer/tumble.jpg'
-        = image_tag 'footer/snap.jpg'
-        = image_tag 'footer/polyvore.jpg'
+        = image_tag '_icons/facebook.png'
+        = image_tag '_icons/instagram.png' , class: 'instagram'
+        = image_tag '_icons/twitter.png', class: 'twitter'
+        = image_tag '_icons/pinterest.png'
+        = image_tag '_icons/tumble.jpg'
+        = image_tag '_icons/snap.jpg'
+        = image_tag '_icons/polyvore.jpg'
 
       .register-email
         = text_field_tag 'email', nil, placeholder: 'REGISTER YOUR EMAIL FOR THIS XX OFFER'
