--- a/app/assets/stylesheets/redesign/_footer.css.scss
+++ b/app/assets/stylesheets/redesign/_footer.css.scss
@@ -152,6 +152,11 @@
 	    background-color: black;
 	    padding-left: 15px;
 	    padding-right: 20px;
+	    .instagram, .twitter{
+	    	margin-left: 7px;
+    		margin-right: 7px;
+	    }
+
     }
     .social-row{
     	padding-top: 40px;
