--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -11,10 +11,10 @@
         = image_tag '_icons/snap.jpg'
         = image_tag '_icons/polyvore.jpg'
 
-      .register-email
+      .register-email.hidden-xs
         = text_field_tag 'email', nil, placeholder: 'REGISTER YOUR EMAIL FOR THIS XX OFFER'
       .submit SUBMIT
-  .row.buttons
+  .row.buttons.hidden-xs
     .col
       = image_tag 'footer/refer.png'
       .text REFER A FRIEND
