fix ham for ip6

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -127,7 +127,7 @@ ruby:
   #sideMenu
     nav.navbar.navbar-default.visible-xs.visible-sm
       .navbar-header
-        a.navbar-brand href="#"  SHOP
+        a.navbar-brand href="#"  MENU
         a#close
           = image_tag('Hamburger.svg', height: '25px')
       .main-menu
