--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -620,6 +620,10 @@ li#cart-trigger {
   font-size: 15px;
   top: 0;
 
+  nav.navbar{
+    border: none;
+  }
+
   @media(max-width: 320px){
     width: 300px;
     left: -300px;
@@ -633,6 +637,10 @@ li#cart-trigger {
   @media(min-width: 400px)and(max-width:599px){
     width: 390px;
     left: -390px;
+
+    nav .navbar-header .navbar-brand{
+      margin-left: 140px;
+    }
   }
 
   @media(min-width: 599px)and(max-width:759px){
@@ -655,13 +663,12 @@ li#cart-trigger {
   @include transition(margin-left 0.4s);
 
   .navbar-header {
-    background-color: #e7e7e7;
+    background-color: black;
     padding-top:10px;
     padding-bottom:10px;
     width:100%;
-    .nav-brand {
-      margin-left: 5px;
-
+    .navbar-brand {
+      color: white;
     }
   }
   nav{
