fix cursor pointer for filter section on ff
I add cursor pointer to filter section on ff

--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -213,6 +213,11 @@
 			.left-path{
 				margin-left: 12px;
 			}
+			#filter-mobile{
+				span{
+					cursor: pointer;
+				}
+			}
 			.filter-mobile-text{
 				margin-left: 20px;
 			}
