--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -19,6 +19,9 @@ header{
   }
   .nav-menu:first-child{
     border: none;
+    .nav-menu-container{
+      background-color: white;
+    }
   }
 }
 .nav-menu {
