--- a/app/assets/stylesheets/redesign/_footer.css.scss
+++ b/app/assets/stylesheets/redesign/_footer.css.scss
@@ -21,6 +21,9 @@
 	.footer-navigation {
 		margin-top: 30px;
 		font-size: 1.3rem;
+		@media(max-width: 800px){
+			text-align:center;
+		}
 	}
 	ul.footer-nav {
 		margin-top: -2px;
@@ -28,7 +31,6 @@
 
 	.col-md-6 {
 		p {
-			padding-top: 30px;
 			font-size: 1.2rem;
 		}
 	}
@@ -102,6 +104,11 @@
 	}
 
 	.address {
+		@media(max-width: 992px)
+		{
+			width: 100%;
+			text-align: center;
+		}
 		float: left;
 		p {
 			span a{
@@ -141,7 +148,15 @@
 	    margin-right: 30px;
 	}
 
-
+	.desktop-social{
+		.stay-social-images{
+			margin-top: -6px;
+			img{
+				width: 35px;
+				margin-left: 5px;
+			}
+		}
+	}
     .stay-social{
     	padding-left: 40px;
     	padding-right: 50px;
@@ -152,10 +167,6 @@
 	    background-color: black;
 	    padding-left: 15px;
 	    padding-right: 20px;
-	    .instagram, .twitter{
-	    	margin-left: 7px;
-    		margin-right: 7px;
-	    }
 
     }
     .social-row{
@@ -269,25 +280,39 @@
 		    	@media(min-width: 768px){
 					padding-left:37%;
 		    	}
+		    	@media(max-width: 320px)
+		    	{
+		    		padding-left: 26%;
+		    	}
+		    	@media(min-width: 414px)and(max-width:599px){
+		    		padding-left: 26%;
+		    	}
 
 		    }
 		    .hr48 {
-		    	padding-left: 8%;
+		    	padding-left: 10%;
 		    	@media(min-width: 600px)and(max-width:767px){
 		    		padding-left:23%;
 		    	}
 		    	@media(min-width: 768px){
 					padding-left:30%;
 		    	}
+		    	@media(max-width: 320px)
+		    	{
+		    		padding-left: 12%;
+		    	}
+		    	@media(min-width: 414px)and(max-width:599px){
+		    		padding-left: 13%;
+		    	}
 		    }
 		    .chain {
-		    	padding-left: 5%;
+		    	padding-left: 7%;
 		    	@media(min-width: 414px)and(max-width: 599px)
 		    	{
 		    		padding-left: 8%;
 		    	}
 		    	@media(max-width: 320px){
-		    		padding-left: 2%;
+		    		padding-left: 7%;
 		    	}
 		    	@media(min-width: 600px)and(max-width:767px){
 		    		padding-left:23%;
@@ -295,12 +320,16 @@
 		    	@media(min-width: 768px){
 					padding-left:29%;
 		    	}
+		    	@media(min-width: 414px)and(max-width:599px){
+		    		padding-left: 11%;
+		    	}
 		    }
     	}
     	padding-bottom: 20px;
     	img{
     		float: left;
-    		padding-left: 20%;
+    		padding-left: 17%;
+
     	}
     	.text{
     		float: left;
@@ -324,30 +353,102 @@
     			margin-top: 0;
     		}
     	}
-    	@media(min-width: 1101px)and(max-width: 1400px){
-  	  		.text{
-  	  			font-size: 7pt;
-  	  			margin-top: 12px;
-  	  		}
-  	  	}
-  	  	@media(min-width: 900px)and(max-width: 1100px){
-  	  		.text{
-  	  			font-size: 4.5pt;
-  	  			margin-left: 5px;
-  	  			margin-top: 15px;
-  	  		}
-  	  	}
+    	@media(min-width: 992px)and(max-width:1300px){
+			img{
+				padding-left:7%;
+			}
+			.text{
+				font-size: 9pt;
+			}
+		}
+    }
 
+    .mobile-footer{
+    	.row{
+    		background-color: #F7F7F9;
+    		margin-right: 0;
+    		.col-xs-12{
+    			padding-left: 0;
+    			padding-right: 0;
+    		}
+    	}
+    	.input-group{
+    		height: 10px;
+    	}
+    	.input-group-addon{
+    		background-color: black;
+    		color: white;
+    	}
+    	input{
+    		width: 100%;
+    		font-size: 10pt;
+    		color: black;
+    		font-weight: 500;
+    		border: none;
+    		max-height: 10px;
+    		@media(min-width: 321px)and(max-width: 413px)
+			{
+				font-size:6.5pt;
+			}
+			@media(max-width: 320px)
+			{
+			    font-size: 6pt;
+			    padding-left: 10px;
+			    padding-right: 10px;
+			}
+    	}
+    	.submit{
+    		background-color: black;
+    		color: white;
+    		font-weight: 600;
+    		cursor: pointer;
+    	}
+    	.stay-social{
+    		margin-top: 10px;
+    		font-weight: 600;
+    	}
+    	.stay-social-images{
+    		text-align: center;
+    		margin-top: 10px;
+    		padding-top: 5px;
+    		padding-bottom: 5px;
+    		width: 100%;
+    		img{
+    			margin-left: 20px;
+    			@media(min-width: 321px)and(max-width: 413px)
+    			{
+    				margin-left: 14px;
+    			}
+    			@media(max-width: 320px)
+    			{
+    				margin-left: 6px;
+    			}
+    			@media(min-width: 600px)and(max-width: 799px)
+    			{
+    				margin-left: 40px;
+    			}
+    			@media(min-width: 800px){
+    				margin-left: 60px;
+    			}
+    		}
+    	}
+    }
+    .second-col , .last-col{
+    	padding-top: 20px;
     }
 
 }
 
 .copyright {
+	@media(max-width:992px){
+		text-align:center;
+	}
+	/*
 	@media(min-width: 768px)and(max-width:990px){
 		p {
 			float:right;
 		}
-	}
+	}*/
 
 	@media(min-width: 990px)and(max-width:1100px){
 		p {
