--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -1,15 +1,9 @@
 .footer.container
-  .row.social-row.hidden-xs.hidden-sm
+  .row.social-row.hidden-xs.hidden-sm.desktop-social
     .col-md-10.col-md-offset-1
       .stay-social STAY SOCIAL
       .stay-social-images
-        = image_tag '_icons/facebook.png'
-        = image_tag '_icons/instagram.png' , class: 'instagram'
-        = image_tag '_icons/twitter.png', class: 'twitter'
-        = image_tag '_icons/pinterest.png'
-        = image_tag '_icons/tumble.jpg'
-        = image_tag '_icons/snap.jpg'
-        = image_tag '_icons/polyvore.jpg'
+        = render 'layouts/redesign/social_links'
 
       .register-email
         = text_field_tag 'email', nil, placeholder: 'REGISTER YOUR EMAIL FOR THIS XX OFFER'
@@ -27,23 +21,36 @@
       br
       .text THE FAME CHAIN
 
-  .row.buttons.visible-xs.visible-sm
-    .col-xs-12
-      = image_tag 'footer/refer.png', class: 'refer'
-      .text REFER A FRIEND
-    .col-xs-12
-      = image_tag 'footer/48.png', class: 'hr48'
-      .text 48 HR EXPRESS MAKING
-    .col-xs-12
-      = image_tag 'footer/chain.png', class: 'chain'
-      .text JOIN THE FAME CHAIN
+  .mobile-footer.hidden-md.hidden-lg
+    .row.buttons.visible-xs.visible-sm
+      .col-xs-12
+        = image_tag 'footer/refer.png', class: 'refer'
+        .text REFER A FRIEND
+      .col-xs-12
+        = image_tag 'footer/48.png', class: 'hr48'
+        .text 48 HR EXPRESS MAKING
+      .col-xs-12
+        = image_tag 'footer/chain.png', class: 'chain'
+        .text JOIN THE FAME CHAIN
+
+    .row.email-row
+      .col-xs-12.col-sm-12
+        .input-group
+          input type="text" class="form-control email" placeholder="REGISTER YOUR EMAIL FOR THIS XX OFFER" aria-describedby="basic-addon2"
+          span.input-group-addon#basic-addon2 SUBMIT
+    .row
+      .stay-social
+        center STAY SOCIAL
+    .row
+      .stay-social-images
+        = render 'layouts/redesign/social_links'
 
   .footer-navigation
-    .col-md-3.col-sm-6
-      = image_tag 'logo/logo-mobile.png', class: 'footer-logo'
+    .col-md-4.col-sm-12
+      = image_tag 'logo/logo-mobile.png', class: 'footer-logo hidden-xs hidden-sm'
       = render 'layouts/redesign/address'
 
-    .col-md-2.col-md-offset-5.col-sm-3
+    .col-md-2.col-md-offset-3.col-sm-3.hidden-xs.hidden-sm.second-col
       ul.footer-nav
         li.footer-nav--item
           = link_to 'Why Shop With Us', why_us_path
@@ -59,7 +66,7 @@
         li.footer-nav--item
           = link_to 'New Sizing', size_guide_path, :style => 'color:red'
 
-    .col-md-2.col-sm-3
+    .col-md-2.col-sm-3.hidden-xs.hidden-sm.last-col
       ul.footer-nav
         li.footer-nav--item
           = link_to 'Terms', terms_path
@@ -71,7 +78,7 @@
           = link_to 'Contact Us', new_contact_path
 
   .lower-row
-    .col-md-6.col-sm-4.copyright
+    .col-md-6.col-sm-12.copyright
       p
         | &copy;&nbsp;
         = Time.now.year
