--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -129,7 +129,7 @@ ruby:
       .navbar-header
         a.navbar-brand href="#"  MENU
         a#close
-          = image_tag('Hamburger.svg', height: '25px')
+          = image_tag('Hamburger_white.png', height: '25px')
       .main-menu
         ul.nav.navbar-nav
           li
