--- a/app/views/layouts/redesign/_social_links.html.slim
+++ b/app/views/layouts/redesign/_social_links.html.slim
@@ -8,7 +8,7 @@ a href='https://www.pinterest.com/fameandpartners/'
   = image_tag '_icons/pinterest.png'
 a href='http://fameandpartners.tumblr.com/'
   = image_tag '_icons/tumble.jpg'
-a href='https://www.facebook.com/FameandPartners'
+a href='#'
   = image_tag '_icons/snap.jpg'
 a href='http://fameandpartners.polyvore.com/'
   = image_tag '_icons/polyvore.jpg'
