--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -1,5 +1,6 @@
 // Fonts and icons
 @import url(http://fonts.googleapis.com/css?family=Forum);
+@import "font-awesome-sprockets";
 @import 'font-awesome';
 
 // Include bootstrap
